  - Fix PEP8 W503 errors (line break before binary operator) and enable the
    PEP8 test for this in test_code.CodeTest.
* Merged in lp:~aaron-whitehouse/duplicity/PEP8_line_length
  - Set line length error length to 120 (matching tox.ini) for PEP8 and
    fixed E501(line too long) errors.
* Merged in lp:~duplicity-team/duplicity/po-updates


New in v0.7.07.1 (2016/04/19)
---------------------------
* Fixed bug #1568677 duplicity fails to use existing S3 bucket in boto backend
  - bug introduced by incomplete fix of bug #1296793
  - simplified setting of bucket locations
* Fixed bug #1569523 get_bucket unknown keyword location and my_location name error
  - bug introduced in improper fix of bug #1568677
  - gotta love those inconsistent APIs
* Fixed bug #1571134 incompatible with python-oauth2client version 2.x
  and #1558155 PyDrive backend broken, needs update to oauth2client library
  - used patch from https://bugs.debian.org/820725 but made changes
    to allow the user to continue using the old version
* Fixed bug #1570293 duplicity is very slow due to excessive fsync
  - removed flush() after write.
  - revert to previous version
* Merged in lp:~aaron-whitehouse/duplicity/07-fix_deja_dup_error_on_locked_files
  - Revert log.Error to log.Warn, as it was prior to the merge in rev 1224,
    as this was affecting other applications (e.g. deja dup; Bug #1605939).


New in v0.7.07 (2016/04/10)
---------------------------
* Merged in lp:~matthew-t-bentley/duplicity/b2
  - Fix import and error typos.
  - Allow multiple backups in the same bucket.
  - Fixes bug #1523498.
  - A couple fixes allowing multiple backups to be hosted in different
    folders in the same bucket as well as some logging for -v9.
* Random stuff:
  - remove RPM stuff from makedist
  - have makedist pull directly from VCS, not local dir
  - update po translation directory and build process
  - clean up some odd error messages
  - move Pep8 ignores to tox.ini